css/style.css
*{
    box-sizing: border-box;
    margin:0;
    padding:0;
}

html,body{
    overflow: hidden;
}

body{
    background-color: #f9fafb;
}

.container{
    display: flex;
    height: 100vh;
}

.left-col{
    width:40%;
    position: relative;
}

.right-col{
    width:60%;
    /* padding: 3rem; */
}

.background-img{
    width: 100%;
    height: 100%;
}

label{
    text-transform: uppercase;
}

.logo-container{
    position: absolute;
    top: 15%;
    background-color: black;
    opacity: 0.6;
    /* background-color: rgba(96, 95, 95, 0.3); */
    width: 100%;
    padding: 0.5rem 0;
    /* display: inline-block; */
}

h1{
    color: white;
}

.odin-img{
    width: 15%;
}

.logo{
    display: flex;
    justify-content: center;
    align-items: center;
}

.right-col{
    padding: 1rem 5rem 5rem 3rem;
}

.create-account-btn{
    background-color: #596D48;
    color: #fff;
    width: 160px;
    height: 40px;
    border-radius: 9px;
    border: none;
    font-size: medium;
    margin: 2rem 0;
}

.create-account-btn:hover{
    opacity: .7;
    cursor: pointer;
}

input{
    width: 12.5rem;
    border: 1px solid hsl(223, 7%, 63%);
    border-radius: 3px;
    height: 26px;
    padding:6px;
}

input:focus{
    border: 1.5px solid hsl(224deg 68% 60%);
    outline: none;
    box-shadow: 1px 1px 1px .75px hsl(0deg 0% 83%)
}

.right-col > .header-text{
    font-size: 25px;
}

.header-text p{
    margin-bottom: 1rem;
}

p{
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.form-section{
    margin-top: 2.5rem;
    background-color: #ffffff;
    margin-left: -47px;
    margin-right: -80px;
    padding: 1.5rem 3rem;
    box-shadow: 0px 4px 5px #dcdddd;
}

form{
    display: flex;
}

form > div{
    width: 50%;
}

.form-control > *{
    display: block;
}

label{
    margin-top: 1rem;
}

.log-in-text{
    color: #596D48;
}

.log-in-text:hover{
    text-decoration: underline;
    cursor: pointer;
}

